--- a/Pokedex/Views/Home/Index.cshtml
+++ b/Pokedex/Views/Home/Index.cshtml
@@ -44,7 +44,8 @@
                             <div class="btn-group">
                                 @foreach (var tipo in pokemon.Tipo)
                                 {
-                                <a href="#" class="btn my-2 text-white" style="background-color:@Cor(tipo)">@tipo</a>
+                                <a href="#" class="btn my-2 text-white" style="background-color:@Cor(tipo)"
+                                onclick="filter('@tipo')">@tipo</a>
                                 }
                         </div>
                     </div>
@@ -52,11 +53,9 @@
             </div>
             <!-- Card Pokemon - Fim -->
             }
-            <div id="zeroPokemon" class="col-lg-12 text-center" hidden>
+            <div id="zeroPokemon" class="col-lg-12 text-center">
                 <h1 class="my-3 text-danger">Nenhum Pokemon Encontrado</h1>
-            </div>
-        </div>
-
-
-    </div>
+                </div>
+          </div>
+     </div>
 </div>
